# concept-art-studio

backend/: pyproject.toml
backend/app/: main.py
frontend/: README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/components/: ChatPanel.tsx  DownloadWeightsScreen.tsx  ImagePanel.tsx  Toolbar.tsx
frontend/src/lib/: generateImage.ts  pywebview.ts  weights.ts
image_generator/: pyproject.toml
image_generator/image_generator/: __init__.py  _generator.py  _image_codec.py  _pipeline.py  _weights.py
image_generator/scripts/: benchmark_gpu.py  test_generate.py
