[project]
name = "backend"
version = "0.1.0"
description = "pywebview desktop host for concept-art-studio"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "image-generator",
    "pywebview (>=6.2.1,<7.0.0)",
    "torch (>=2.11.0,<3.0.0)",
    "torchvision (>=0.26.0,<0.27.0)"
]


[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
image-generator = {path = "../image_generator", develop = true}
torch = {source = "pytorch-cu128"}
torchvision = {source = "pytorch-cu128"}

[[tool.poetry.source]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
