[project]
name = "image-generator"
version = "0.1.0"
description = "Reusable image generation module"
authors = [
    {name = "musharib130",email = "musharibayub@gmail.com"}
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch (>=2.11.0,<3.0.0)",
    "torchvision (>=0.26.0,<0.27.0)",
    "diffusers (>=0.39.0,<0.40.0)",
    "transformers (>=4.46,<5.0.0)",
    "accelerate (>=1.14.0,<2.0.0)",
    "safetensors (>=0.8.0,<0.9.0)",
    "pillow (>=12.3.0,<13.0.0)",
    "huggingface-hub (>=0.25,<1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch-cu128"}
torchvision = {source = "pytorch-cu128"}
